# floating-ui

./: .gitignore  Cargo.toml  README.md
crates/core/: Cargo.toml  compute_coords_from_placement.rs  compute_position.rs  detect_overflow.rs  lib.rs  middleware.rs  types.rs
crates/core/middleware/: arrow.rs  auto_placement.rs  flip.rs  hide.rs  inline.rs  offset.rs  shift.rs  size.rs
crates/core/tests/: compute_coords_from_placement_test.rs  compute_position_test.rs
crates/dom/: Cargo.toml
crates/dom/example/src/: lib.rs
crates/dom/src/: auto_update.rs  client_rect.rs  dom.rs  lib.rs  middleware.rs  platform.rs  types.rs
crates/dom/src/platform/: convert_offset_parent_relative_rect_to_viewport_relative_rect.rs  get_client_length.rs  get_client_rects.rs  get_clipping_rect.rs  get_dimensions.rs  get_element_rects.rs  get_offset_parent.rs  get_scale.rs  is_rtl.rs
crates/leptos/src/: arrow.rs  lib.rs  types.rs  use_floating.rs
crates/leptos/tests/: playwright.rs
crates/utils/: Cargo.toml  coordinate.rs  dom.rs  element.rs  length.rs  lib.rs  orientation.rs  padding.rs  rect.rs  strategy.rs
crates/utils/element/: default_virtual_element.rs  element_or_virtual.rs  element_or_window.rs  owned_element_or_virtual.rs
examples/floating-ui-dom/: Cargo.toml  index.html
examples/floating-ui-dom/src/: lib.rs
examples/floating-ui-leptos/: Cargo.toml  index.html
examples/floating-ui-leptos/src/: app.rs  main.rs
playwright/leptos-test-visual/: Cargo.toml
playwright/leptos-test-visual/tests/: playwright.rs
scripts/: Cargo.toml
(+54 files in other folders)
