[package]
name = "floating-ui-utils"
description = "Rust port of Floating UI. Utilities for Floating UI."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cfg-if.workspace = true
dyn-clone.workspace = true
serde.workspace = true

[lib]
path = "lib.rs"

[package.metadata.docs.rs]
all-features = true
